// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 1`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"author\\": true
}"
`;

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 2`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"authors\\": \\"author should be singular\\"
}"
`;

exports[`checkInsertDocSchema should compare the inserted doc with the schema definition 3`] = `
"Invalid document structure. 
Class has been initialized with the following schema: 

{
  \\"quote\\": \\"string\\",
  \\"author\\": \\"string\\"
}

but found the following doc:

{
  \\"quote\\": \\"hello, world!\\",
  \\"foo\\": {
    \\"bar\\": 10
  }
}"
`;

exports[`defaultLanguage should throw an error if the desired language is not supported 1`] = `
"Language \\"latin\\" is not supported.
Supported languages are:
 - dutch
 - english
 - french
 - italian
 - norwegian
 - portugese
 - russian
 - spanish
 - swedish"
`;

exports[`lyra Should throw error if where clause is not correct 1`] = `"Invalid query parameters. Expected >=, >, =, <, <=, but got: A"`;

exports[`lyra Should throw error if where clause is not correct 2`] = `"Invalid query parameters. Expected a number, but got: A STRING"`;

exports[`lyra Should throw error if where clause is not correct 3`] = `"Invalid query parameters. Expected >=, >, =, <, <=, but got: {\\"=\\":123123,\\">=\\":123454}"`;

exports[`lyra Should throw error if where clause is not correct 4`] = `"Invalid query parameters. Expected true, false, but got: 1"`;
